tests/pass/conditions4.tiger
let
	var x := 1
in
	if x
	then
		(x := 2)
	else
		(x := 3)
	;
	x := 4
end
