tests/fail/semantic/function-argument-count-1.tiger
let
      var x : int

      function f() : int = (
            1
      )
in
      x = f(2)
end
